app/app.css
/* ... */
.navbar-default .navbar-toggle .icon-bar {
    background-color:#fff;
}

.navbar-default .navbar-toggle:hover {
    background-color:#9a1026;
}

.navbar-default .navbar-toggle:focus {
    background-color:#A61229;
}

.container-narrow > hr {
    margin: 30px 0;
}

/* Main marketing message and sign up button */
.jumbotron {
    text-align: center;
    border-bottom: 1px solid #e5e5e5;
}
.jumbotron .btn {
    font-size: 21px;
    padding: 14px 24px;
}

/* Supporting marketing content */
.marketing {
    margin: 40px 0;
}
.marketing p + h4 {
    margin-top: 28px;
}

ul.header-menu {
    float:left;
    padding-left:23px;
}

ul.header-menu li {
    list-style:none;
    float:left;
    margin-right:15px;
    margin-top:10px;
}

ul.header-menu li a{
    color:#fff;
    text-decoration:none;
    opacity:0.9;
}

ul.header-menu li a:hover{
    opacity:1;
}

.nav>li>a {
    color: #696969;
    border-left:3px solid transparent;
    -webkit-transition: all .2s;
    -moz-transition: all .2s;
    -ms-transition: all .2s;
    -o-transition: all .2s;
    transition: all .2s;
}

.sidebar .nav>li ul {
    border-left: 3px solid #A61229;
}

.sidebar .nav>li ul>li a {
    font-family:'robotoregular';
    background-color:#fdfdfd;
}

.nav>li>a:visited {
}

.nav>li.active>a {
    text-decoration: none;
    background-color: #fdfdfd;
    color: #565656;
    border-color:#A61229;
}

.nav>li.active>a:hover,
.sidebar .nav>li ul>li a:hover,
.nav>li>a:hover {
    background-color:#f9f9f9;
}

/*!
 * Start Bootstrap - SB Admin 2 Bootstrap Admin Theme (http://startbootstrap.com)
 * Code licensed under the Apache License v2.0.
 * For details, see http://www.apache.org/licenses/LICENSE-2.0.
 */

select {
    padding: 5px 10px;
    border-color: #dcdcdc;
    outline: none;
}

#wrapper {
    width: 100%;
}

.manager-view {
    height:100%;
    width: calc(100% - 250px);
    -webkit-width: calc(100% - 250px);
    position: absolute;
    right: 0;
    background-color:#e9ebee;
	-webkit-transition: all .2s;
    -moz-transition: all .2s;
    -ms-transition: all .2s;
    -o-transition: all .2s;
    transition: all .2s;
}

.manager-view-inner {
    height:calc(100% - 41px);
    -webkit-height:calc(100% - 41px);
    display: -webkit-flex;
    display: flex;
    -webkit-flex-direction: column;
    flex-direction: column;
	-webkit-transition: all .2s;
    -moz-transition: all .2s;
    -ms-transition: all .2s;
    -o-transition: all .2s;
    transition: all .2s;
}

.manager-view-header {
    /*width:100%;*/
    /*width: calc(100% - 300px);*/
    padding:10px;
    background-color:#fff;
    -webkit-flex-shrink: 0;
    flex-shrink: 0;
    position:relative;
    z-index:1;
    height: 50px;
	-webkit-box-shadow: 0px 1px 3px rgba(0,0,0,0.13);
    box-shadow: 0px 1px 3px rgba(0,0,0,0.13);
}

.manager-view-content {
    padding:25px 40px;
    overflow:auto;
    -webkit-flex-grow: 1;
    flex-grow: 1;
}

.navbar-top-links {
    margin-right: 0;
    float:right;
}

.navbar-top-links li {
    display: inline-block;
}

.navbar-top-links li:last-child {
    margin-right: 15px;
}

.navbar-top-links li a {
    color:#fff;
    cursor:pointer;
}

.navbar-top-links li>a:hover,
.navbar-top-links .open>a,
.navbar-top-links .open>a:hover,
.navbar-top-links .open>a:active,
.navbar-top-links .open>a:focus {
    background-color:#9A1026;
}

.navbar-top-links .dropdown-menu li.divider {
    margin:0;
}

.navbar-top-links .dropdown-menu li a:hover {
    background-color:#fcfcfc;
}

.navbar-top-links .open>a,
.navbar-top-links .open>a:hover {
    border-color:#9A1026;
}

.navbar-top-links .dropdown-menu li {
    display: block;
}

.navbar-top-links .dropdown-menu li:last-child {
    margin-right: 0;
}

.navbar-top-links .dropdown-menu li a {
    padding: 10px 20px;
    min-height: 0;
    color:#444;
}

.navbar-top-links .dropdown-menu li a div {
    white-space: normal;
}

.navbar-top-links .dropdown-messages,
.navbar-top-links .dropdown-tasks,
.navbar-top-links .dropdown-alerts {
    width: 310px;
    min-width: 0;
}

.navbar-top-links .dropdown-messages {
    margin-left: 5px;
}

.navbar-top-links .dropdown-tasks {
    margin-left: -59px;
}

.navbar-top-links .dropdown-alerts {
    margin-left: -123px;
}

.navbar-top-links .dropdown-user {
    right: 0;
    left: auto;
	border:none;
}

.sidebar {
    background-color:#fff;
	-webkit-transition: all .2s;
    -moz-transition: all .2s;
    -ms-transition: all .2s;
    -o-transition: all .2s;
    transition: all .2s;
}

.sidebar .fa {
	font-size:18px;
	margin-right:10px;	
}

.sidebar span.menu-text {
	display:inline-block;	
}

.sidebar .sidebar-nav.navbar-collapse {
    padding-right: 0;
    padding-left: 0;
}

.sidebar .sidebar-search {
    padding: 15px;
}

.sidebar ul li {
    font-family: 'robotomedium';
    letter-spacing: 0.2px;
    border-bottom: 1px solid #efefef;
}

.sidebar ul li a {
	/*height:40px;*/
	overflow:hidden;
	padding:15px;
}

.sidebar ul li a.active {
    background-color: #eee;
}

.sidebar .arrow {
    float: right;
}

.sidebar .fa.arrow:before {
    content: "\f104";
}

.sidebar .active>a>.fa.arrow:before {
    content: "\f107";
}

.sidebar .nav-second-level li,
.sidebar .nav-third-level li {
    border-bottom: 0!important;
}

.sidebar .nav-second-level li a {
    padding-left: 37px;
}

.sidebar .nav-third-level li a {
    padding-left: 52px;
    font-size: 12px;
}

.sidebar-person-info {
	overflow-x: visible;
    overflow-y: auto;
    /*position: absolute;*/
    width: 100%;
    /*max-height: 50%;*/
    background: whitesmoke;
	/*display:none;*/ /** angular template will hndle this */
}

.sidebar-person-info .identity {
	color:#555;
	padding:10px;
	padding-bottom: 0px;
}

.sidebar-person-info .identity-header {
	border-bottom: 1px solid #ECECEC;
}

.sidebar-person-info .identity-info {
	margin-top:10px;
	color: #6D6D6D;
	border-bottom: 1px solid #ECECEC;
}

.sidebar-person-info .identity-info div {
	margin-bottom:4px;
}
/* ... */

